--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,38 +1,21 @@
-.TaskList {
-  width: 600px;
+.list {
+  display: block;
+  padding: 10px;
+  width: 800px;
+  max-width: 90%;
+  min-width: 480px;
 }
-
-.TaskList_item {
+.item {
+  margin-bottom: 10px;
   display: flex;
-  align-items: center;
-  padding: 12px;
-
-  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
-    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+  justify-content: space-between;
 }
-
-.TaskList_item + .TaskList_item {
-  margin-top: 12px;
-}
-
-.TaskList_item.completed {
-  background-color: green;
-}
-
-.TaskList_text {
-  flex: 0 0 65%;
-  margin-top: 0;
+.item:last-child {
   margin-bottom: 0;
-  margin-right: 16px;
-  border-radius: 3px;
+}
+.contact {
+  display: inline-flex;
+  justify-content: space-between;
+  width: 80%;
 }
 
-.TaskList_actions {
-  display: flex;
-  justify-content: center;
-}
-
-.TaskList_button {
-  margin-right: 4px;
-  margin-left: 4px;
-}
